EDU-901 Add caption to table-of-contents plugin

--- a/src/plugins/table-of-contents/table-of-contents.yml
+++ b/src/plugins/table-of-contents/table-of-contents.yml
@@ -1,6 +1,9 @@
 name:
   en: Table of contents
   de: "Inhalts\u00ADverzeichnis"
+defaultCaption:
+  en: Table of contents
+  de: Inhaltsverzeichnis
 levelRange:
   en: Level range
   de: Ebenen-Umfang
