EDU-901 Rename caption to text and make it a block markdown element

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -445,7 +445,7 @@ trackMixer:
   de: Spur-Mixer
 caption:
   en: Caption
-  de: Titelzeile
+  de: Legende
 defaultVolumePreset:
   en: Default
   de: Standard
