--- a/src/components/search-bar.yml
+++ b/src/components/search-bar.yml
@@ -1,3 +1,6 @@
 searchPlaceholder:
   en: Search terms
   de: Suchbegriffe
+searchTermRequired:
+  en: Please specify at least one search term
+  de: Bitte gib mindestens einen Suchbegriff an
