--- a/src/components/resource-picker/files-upload-screen.yml
+++ b/src/components/resource-picker/files-upload-screen.yml
@@ -14,7 +14,7 @@ preprocessed:
   en: edited
   de: bearbeitet
 stage_uploadNotStarted:
-  en: "The following {fileCount, plural, =1 {file} other {# files}} will be uploaded.."
+  en: "The following {fileCount, plural, =1 {file} other {# files}} will be uploaded."
   de: "Die {fileCount, plural, =1 {folgende Datei wird} other {folgenden # Dateien werden}} hochgeladen."
 stageDetails_uploadNotStarted:
   en: "You can edit images before upload by clicking on the pen icon."
