EDU-907 Create memory-editor component

--- a/src/plugins/memory/memory.yml
+++ b/src/plugins/memory/memory.yml
@@ -1,3 +1,12 @@
 name:
   en: Memory
   de: Memory
+tilePairs:
+  en: Tile pairs
+  de: Kachelpaare
+tileA:
+  en: Tile A
+  de: Kachel A
+tileB:
+  en: Tile B
+  de: Kachel B
