--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -452,3 +452,12 @@ volumePreset:
 displayMode:
   en: Display mode
   de: Anzeigemodus
+searchTextTooShort:
+  en: The search text has to be at least {minCharCount, plural, =1 {# character} other {# characters}} long
+  de: Der Suchbegriff muss mindestens {minCharCount} Zeichen lang sein
+searchOngoing:
+  en: Searching …
+  de: Suche …
+searchResultInfo:
+  en: You are seeing results for the search term <0>{searchTerm}</0>
+  de: Du siehst Ergebnisse für den Suchbegriff <0>{searchTerm}</0>
