--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -459,5 +459,15 @@ searchOngoing:
   en: Searching …
   de: Suche …
 searchResultInfo:
-  en: You are seeing results for the search term <0>{searchTerm}</0>
-  de: Du siehst Ergebnisse für den Suchbegriff <0>{searchTerm}</0>
+  en: |
+    {
+    resultCount, select,
+    0 {Searching for the term <0>{searchTerm}</0> yielded no results}
+    other {You are seeing {resultCount, plural, =1 {# result} other {# results}} for the search term <0>{searchTerm}</0>}
+    }
+  de: |
+    {
+    resultCount, select,
+    0 {Die Suche nach dem Begriff <0>{searchTerm}</0> erzielte keine Ergebnisse}
+    other {Du siehst {resultCount, plural, =1 {# Ergebnis} other {# Ergebnisse}} für den Suchbegriff <0>{searchTerm}</0>}
+    }
