--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -456,8 +456,8 @@ searchTextTooShort:
   en: The search text has to be at least {minCharCount, plural, =1 {# character} other {# characters}} long
   de: Der Suchbegriff muss mindestens {minCharCount} Zeichen lang sein
 searchOngoing:
-  en: Searching …
-  de: Suche …
+  en: Searching ...
+  de: Suche ...
 searchResultInfo:
   en: |
     {
@@ -471,3 +471,9 @@ searchResultInfo:
     0 {Die Suche nach dem Begriff <0>{searchTerm}</0> erzielte keine Ergebnisse}
     other {Du siehst {resultCount, plural, =1 {# Ergebnis} other {# Ergebnisse}} für den Suchbegriff <0>{searchTerm}</0>}
     }
+more:
+  en: more ...
+  de: mehr ...
+less:
+  en: less ...
+  de: weniger ...
