--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-dom": "^16.14.0",
     "react-dropzone": "^14.2.1",
     "react-i18next": "^11.12.0",
+    "react-infinite-scroll-hook": "^4.0.4",
     "react-pdf": "^5.7.1",
     "react-player": "^2.11.0",
     "react-region-select": "^2.3.0",
