--- a/src/components/resource-picker/wikimedia-commons-search.yml
+++ b/src/components/resource-picker/wikimedia-commons-search.yml
@@ -1,6 +1,6 @@
-searchFileTypeLabel:
-  en: Search for
-  de: Suche nach
+searchTerm:
+  en: Search term
+  de: Suchbegriff
 searchFileType_image:
   en: Image
   de: Bild
@@ -13,6 +13,12 @@ searchFileType_audio:
 searchFileType_pdf:
   en: PDF
   de: PDF
+searchInvitationHeader:
+  en: Search in the Wikimedia Commons Database
+  de: Suche in der Wikimedia-Commons-Datenbank
+searchInvitationDescription:
+  en: Enter a search term in the field above and select whether you want to search for images, videos, etc.
+  de: Gib einen Suchbegriff in das Feld oben ein und wähle aus, ob du nach Bildern, Videos, etc. suchen möchtest
 initialFilePreviewHeader:
   en: Currently selected file
   de: Momentan ausgewählte Datei
