EDU-916 Adjust memory plugin editor to support sourceUrl and include tile preview

--- a/src/plugins/memory/memory.yml
+++ b/src/plugins/memory/memory.yml
@@ -10,3 +10,12 @@ tileA:
 tileB:
   en: Card B
   de: Karte B
+text:
+  en: text
+  de: Text
+url:
+  en: media URL
+  de: Medien-URL
+preview:
+  en: Card pairs preview
+  de: Kartenpaarevorschau
