EDU-920 Change UI and controller to handle batch room invitations

--- a/src/components/room-invitation-creation-modal.yml
+++ b/src/components/room-invitation-creation-modal.yml
@@ -1,6 +1,12 @@
-newRoomInvitation:
-  en: New invitation
-  de: Neue Einladung
-emailRequired:
+sendRoomInvitations:
+  en: Send invitations
+  de: Einladungen versenden
+emailAddresses:
+  en: Email addresses
+  de: E-Mail-Adressen
+emailsRequired:
   en: Please specify an email address
   de: Bitte gib eine E-Mail-Adresse an
+notAllEmailsValid:
+  en: Not all specified email addresses are valid
+  de: Nicht alle angegebenen E-Mail-Adressen sind gültig
