EDU-916 Streamline form labels

--- a/src/plugins/memory/memory.yml
+++ b/src/plugins/memory/memory.yml
@@ -10,11 +10,8 @@ tileA:
 tileB:
   en: Card B
   de: Karte B
-text:
-  en: text
-  de: Text
 url:
-  en: media URL
+  en: Media URL
   de: Medien-URL
 preview:
   en: Card pairs preview
