EDU-916 Correct divider text

--- a/src/plugins/memory/memory.yml
+++ b/src/plugins/memory/memory.yml
@@ -14,5 +14,5 @@ url:
   en: Media URL
   de: Medien-URL
 preview:
-  en: Card pairs preview
-  de: Kartenpaarevorschau
+  en: Card pair preview
+  de: Kartenpaarvorschau
