--- a/src/components/room-metadata-form.yml
+++ b/src/components/room-metadata-form.yml
@@ -2,5 +2,5 @@ roomNameRequired:
   en: Please specify a room name
   de: Bitte gib einen Raumnamen an
 documentsModeInfo:
-  en: In exclusive room documents can be managed only by the owner, in collaborative rooms by all room members.
-  de: In exklusiven Räumen können Dokumente nur von den Besitzern verwaltet werden, in kollaborativen Räumen von allen Raummitgliedern.
+  en: In exclusive rooms documents can be managed only by the owner. In collaborative rooms all room members can add and modify documents, however only the owner can delete them.
+  de: In exklusiven Räumen können Dokumente nur von den Besitzern verwaltet werden. In kollaborativen Räumen können alle Raummitglieder Dokumente erstellen und bearbeiten, jedoch nur Besitzer können diese löschen.
