EDU-924 Add option for image border in markdown-with-image plugin

--- a/src/plugins/markdown-with-image/markdown-with-image.yml
+++ b/src/plugins/markdown-with-image/markdown-with-image.yml
@@ -10,6 +10,9 @@ imageWidth:
 imagePosition:
   en: Image position
   de: Bildstelle
+imageBorder:
+  en: Image border
+  de: Bildrahmen
 left:
   en: left
   de: Links
