--- a/src/plugins/markdown-with-image/markdown-with-image.yml
+++ b/src/plugins/markdown-with-image/markdown-with-image.yml
@@ -1,6 +1,12 @@
 name:
   en: Markdown with image
   de: Markdown mit Bild
+textOffsetLabel:
+  en: Text offset
+  de: Text-Versatz
+textOffsetInfo:
+  en: "1\u00A0em corresponds to the current paragraph font size"
+  de: "1\u00A0em entspricht der verwendeten Absatz-Schriftgröße"
 imageUrl:
   en: Image URL
   de: Bild-URL
