EDU-941 Rename publicAttributes to publicContext

--- a/src/components/document-metadata-modal.yml
+++ b/src/components/document-metadata-modal.yml
@@ -101,6 +101,6 @@ targetRoom:
 noAvailableRooms:
   en: No available rooms
   de: Keine Räume verfügbar
-publicAttributesHeader:
+publicContextHeader:
   en: Advanced settings
   de: Erweiterte Einstellungen
