--- a/src/plugins/markdown-with-image/markdown-with-image.yml
+++ b/src/plugins/markdown-with-image/markdown-with-image.yml
@@ -5,7 +5,7 @@ textOffsetLabel:
   en: Text offset
   de: Text-Versatz
 textOffsetInfo:
-  en: "1\u00A0em corresponds to the current paragraph font size"
+  en: 1em corresponds to the current paragraph font size
   de: "1\u00A0em entspricht der verwendeten Absatz-Schriftgröße"
 imageUrl:
   en: Image URL
