EDU-926 Correct translation

--- a/src/components/document-metadata-modal.yml
+++ b/src/components/document-metadata-modal.yml
@@ -106,4 +106,4 @@ draft:
   de: Als Entwurf markieren
 draftInfo:
   en: Draft documents can only be accessed and edited by the room owner
-  de: Entwurfsdokumente können nur vom Raumbesitzer zugegriffen und bearbeiten werden
+  de: Entwurfsdokumente können nur vom Raumbesitzer abgerufen und bearbeiten werden
