--- a/.eslintrc
+++ b/.eslintrc
@@ -8,8 +8,7 @@
   "env": {
     "es2022": true,
     "browser": true,
-    "node": true,
-    "jest": true
+    "node": true
   },
   "parserOptions": {
     "ecmaVersion": 2022,
