--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "intl-messageformat": "^9.9.2",
     "joi": "^17.4.2",
     "js-cookie": "^3.0.1",
+    "less-variables-to-json": "^1.0.2",
     "locale-compare": "^1.0.0",
     "make-error": "^1.3.6",
     "markdown-it": "^12.2.0",
