--- a/package.json
+++ b/package.json
@@ -24,68 +24,66 @@
     "url": "https://github.com/educandu/educandu"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
+    "@ant-design/icons": "^4.8.0",
     "@educandu/node-jsx-loader": "^3.0.0",
-    "@sindresorhus/slugify": "^2.1.0",
+    "@sindresorhus/slugify": "^2.1.1",
     "@unly/iso3166-1": "^1.0.2",
-    "abcjs": "^6.0.3",
+    "abcjs": "^6.1.7",
     "accept-language-parser": "^1.5.0",
-    "antd": "5.0.6",
+    "antd": "5.0.7",
     "any-base": "^1.1.0",
-    "async": "^3.2.1",
-    "aws-sdk": "^2.1006.0",
-    "axios": "^0.25.0",
-    "bcrypt": "^5.0.1",
-    "classnames": "^2.3.1",
+    "async": "^3.2.4",
+    "aws-sdk": "^2.1276.0",
+    "axios": "^1.2.1",
+    "bcrypt": "^5.1.0",
+    "classnames": "^2.3.2",
     "connect-mongo": "^4.6.0",
-    "cookie-parser": "^1.4.5",
-    "cropperjs": "^1.5.12",
+    "cookie-parser": "^1.4.6",
+    "cropperjs": "^1.5.13",
     "crypto-js": "^4.1.1",
     "debounce": "^1.2.1",
     "decompress": "^4.2.1",
-    "del": "^6.0.0",
+    "del": "^7.0.0",
     "escape-string-regexp": "^5.0.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-basic-auth": "^1.2.1",
-    "express-joi-validation": "^5.0.0",
-    "express-session": "^1.17.2",
+    "express-joi-validation": "^5.0.1",
+    "express-session": "^1.17.3",
     "express-useragent": "^1.0.15",
     "fast-deep-equal": "^3.1.3",
-    "flag-icon-css": "^3.5.0",
-    "glob": "^7.2.0",
+    "flag-icons": "^6.6.6",
+    "glob": "^8.0.3",
     "gravatar": "^1.8.2",
     "htmlescape": "^1.1.1",
-    "http-errors": "^1.8.0",
-    "i18next": "^21.3.0",
-    "i18next-icu": "^2.0.3",
-    "immutable": "^4.0.0",
-    "intl-messageformat": "^9.9.2",
-    "joi": "^17.4.2",
+    "http-errors": "^2.0.0",
+    "i18next": "^22.4.5",
+    "i18next-icu": "^2.1.0",
+    "immutable": "^4.1.0",
+    "intl-messageformat": "^10.2.5",
+    "joi": "^17.7.0",
     "js-cookie": "^3.0.1",
     "less-variables-to-json": "^1.0.2",
-    "locale-compare": "^1.0.0",
-    "make-error": "^1.3.6",
-    "markdown-it": "^12.2.0",
+    "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
     "md5": "^2.3.0",
     "memoizee": "^0.4.15",
-    "mime": "^2.5.2",
-    "minio": "^7.0.26",
-    "moment": "^2.29.1",
-    "mongodb": "^4.3.1",
-    "multer": "^1.4.3",
+    "mime": "^3.0.0",
+    "minio": "^7.0.32",
+    "moment": "^2.29.4",
+    "mongodb": "^4.12.1",
+    "multer": "^1.4.4",
     "node-graceful": "^3.1.0",
-    "nodemailer": "^6.7.0",
-    "opensheetmusicdisplay": "^1.5.6",
+    "nodemailer": "^6.8.0",
+    "opensheetmusicdisplay": "^1.7.0",
     "papaparse": "^5.3.2",
-    "parse5": "^6.0.1",
+    "parse5": "^7.1.2",
     "parseboolean": "^1.0.0",
-    "passport": "^0.5.0",
+    "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0",
-    "pretty-bytes": "^5.6.0",
-    "prop-types": "^15.7.2",
+    "pretty-bytes": "^6.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-beforeunload": "^2.5.3",
@@ -101,12 +99,9 @@
     "react-player": "^2.11.0",
     "react-region-select": "^2.3.0",
     "read-all-stream": "^3.1.0",
-    "recursive-readdir": "^2.2.2",
-    "serialize-error": "^9.0.0",
-    "soundfont-player": "^0.12.0",
+    "serialize-error": "^11.0.0",
     "stream-to-array": "^2.3.0",
     "thenby": "^1.3.4",
-    "toposort": "^2.0.2",
     "umzug": "^3.0.0",
     "uuid": "^8.3.2"
   },
@@ -118,8 +113,8 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gulp": "^4.0.2",
-    "node-mocks-http": "^1.11.0",
-    "sinon": "^15.0.0",
+    "node-mocks-http": "^1.12.1",
+    "sinon": "^15.0.1",
     "vitest": "^0.25.8"
   }
 }
