--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "abcjs": "^6.1.7",
     "accept-language-parser": "^1.5.0",
     "antd": "5.0.7",
-    "any-base": "^1.1.0",
     "async": "^3.2.4",
     "aws-sdk": "^2.1276.0",
     "axios": "^1.2.1",
@@ -68,6 +67,7 @@
     "moment": "^2.29.4",
     "mongodb": "^4.12.1",
     "multer": "^1.4.4",
+    "nanoid": "^4.0.0",
     "node-graceful": "^3.1.0",
     "nodemailer": "^6.8.0",
     "opensheetmusicdisplay": "^1.7.0",
@@ -97,8 +97,7 @@
     "serialize-error": "^11.0.0",
     "stream-to-array": "^2.3.0",
     "thenby": "^1.3.4",
-    "umzug": "^3.2.1",
-    "uuid": "^9.0.0"
+    "umzug": "^3.2.1"
   },
   "devDependencies": {
     "@educandu/dev-tools": "^6.0.2",
