--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express-session": "^1.17.3",
     "express-useragent": "^1.0.15",
     "fast-deep-equal": "^3.1.3",
+    "fast-safe-stringify": "^2.1.1",
     "flag-icons": "^6.6.6",
     "glob": "^8.0.3",
     "gravatar": "^1.8.2",
