EDU-989 Change lockedOut to accountLockedOn in user data model

--- a/src/components/pages/users.yml
+++ b/src/components/pages/users.yml
@@ -1,8 +1,8 @@
 expires:
   en: Expires
   de: Verfallsdatum
-lockedOut:
-  en: Locked Out
+accountLocked:
+  en: Locked
   de: Ausgesperrt
 roles:
   en: Roles
