EDU-992 Add external account option on login page

--- a/src/components/pages/login.yml
+++ b/src/components/pages/login.yml
@@ -1,3 +1,6 @@
 forgotPassword:
   en: Forgot your password?
   de: Kennwort vergessen?
+loginWithShibboleth:
+  en: Login with Shibboleth
+  de: Mit Shibboleth anmelden
