--- a/src/components/url-input.yml
+++ b/src/components/url-input.yml
@@ -1,9 +1,9 @@
 tooltip_youtube:
   en: Youtube
   de: Youtube
-tooltip_wikimedia-commons:
-  en: Wikimedia Commons
-  de: Wikimedia Commons
+tooltip_wikimedia:
+  en: Wikimedia
+  de: Wikimedia
 tooltip_document-media:
   en: document media storage
   de: Dokument-Medien Speicher
