--- a/src/components/resource-picker/wikimedia-search.yml
+++ b/src/components/resource-picker/wikimedia-search.yml
@@ -14,7 +14,7 @@ searchFileType_pdf:
   en: PDF
   de: PDF
 searchInvitationHeader:
-  en: Search in the Wikimedia Database
+  en: Search in the Wikimedia database
   de: Suche in der Wikimedia-Datenbank
 searchInvitationDescription:
   en: Enter a search term in the field above and select whether you want to search for images, videos, etc.
