--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "nanoid": "^4.0.0",
     "node-graceful": "^3.1.0",
     "nodemailer": "^6.8.0",
-    "opensheetmusicdisplay": "^1.7.0",
+    "opensheetmusicdisplay": "^1.7.1",
     "papaparse": "^5.3.2",
     "parse5": "^7.1.2",
     "parseboolean": "^1.0.0",
@@ -118,5 +118,8 @@
     "selfsigned": "^2.1.1",
     "sinon": "^15.0.1",
     "vitest": "^0.25.8"
+  },
+  "resolutions": {
+    "opensheetmusicdisplay/gl": "^6.0.2"
   }
 }
