EDU-1013 Reintroduce search, but over local/directory media files

--- a/src/components/resource-picker/storage-location.yml
+++ b/src/components/resource-picker/storage-location.yml
@@ -10,9 +10,9 @@ privateStorageMessage:
 publicStorageMessage:
   en: Public directory!
   de: Öffentliches Verzeichnis!
-backToDirectoryView:
-  en: Back to directory view
-  de: Zurück zur Verzeichnisansicht
+clearSearch:
+  en: Clear search
+  de: Suche löschen
 uploadFiles:
   en: Upload files
   de: Dateien hochladen
