--- a/src/components/login-form.yml
+++ b/src/components/login-form.yml
@@ -7,3 +7,6 @@ enterPassword:
 loginFailed:
   en: Login failed. Please check your input.
   de: Die Anmeldung ist fehlgeschlagen. Bitte überprüfe deine Eingabe.
+forgotPassword:
+  en: Forgot your password?
+  de: Kennwort vergessen?
