EDU-994 Move login buttons into login-form

--- a/src/components/login-form.yml
+++ b/src/components/login-form.yml
@@ -10,3 +10,6 @@ loginFailed:
 forgotPassword:
   en: Forgot your password?
   de: Kennwort vergessen?
+loginWithShibboleth:
+  en: Login with Shibboleth
+  de: Mit Shibboleth anmelden
