EDU-1030 Support range in video plugin

--- a/src/components/media-player/media-range-readonly-input.yml
+++ b/src/components/media-player/media-range-readonly-input.yml
@@ -1,6 +1,3 @@
-playbackRange:
-  en: Playback range
-  de: Abspielbereich
-playbackRangeInfo:
+info:
   en: "From {from, select, start {the beginning} other {timecode {from}}} to {to, select, end {the end} other {timecode {to}}}"
   de: "Von {from, select, start {Anfang} other {Time-Code {from}}} bis {to, select, end {Ende} other {Time-Code {to}}}"
