--- a/src/components/pages/dashboard.yml
+++ b/src/components/pages/dashboard.yml
@@ -1,6 +1,6 @@
-newsTabTitle:
-  en: News
-  de: Neuigkeiten
+activitiesTabTitle:
+  en: Activities
+  de: Aktivitäten
 favoritesTabTitle:
   en: Favorites
   de: Favoriten
