EDU-1061 Merge profile and account tabs under settings tab

--- a/src/components/pages/dashboard.yml
+++ b/src/components/pages/dashboard.yml
@@ -4,12 +4,9 @@ activitiesTabTitle:
 favoritesTabTitle:
   en: Favorites
   de: Favoriten
-profileTabTitle:
-  en: Profile
-  de: Profil
-accountTabTitle:
-  en: Account
-  de: Konto
+settingsTabTitle:
+  en: Settings
+  de: Einstellungen
 roomsTabTitle:
   en: Rooms
   de: Räume
