--- a/src/components/room-card.yml
+++ b/src/components/room-card.yml
@@ -1,9 +1,12 @@
 documentsMode:
   en: Mode
   de: Modus
-button:
+enterButton:
   en: Enter room
   de: Raum betreten
+joinButton:
+  en: Accept invitation
+  de: Einladung annehmen
 joined:
   en: Joined
   de: Eingetreten
@@ -14,5 +17,5 @@ members:
   en: Members
   de: Mitglieder
 acceptInvitation:
-  en: The invitation received by email is valid until **{date}**.
-  de: Die per E-Mail geschickte Einladung ist bis **{date}** gültig.
+  en: The invitation is valid until **{date}**.
+  de: Die Einladung ist bis **{date}** gültig.
