EDU-1065 Improve UI of comments panel

--- a/src/components/comments-panel.yml
+++ b/src/components/comments-panel.yml
@@ -4,6 +4,9 @@ addCommentButtonText:
 postCommentButtonText:
   en: Post comment
   de: Kommentar abschicken
+topicHeaderPrefix:
+  en: Topic
+  de: Thema
 newTopicPlaceholder:
   en: New topic
   de: Neues Thema
