--- a/src/components/edit-control-panel.yml
+++ b/src/components/edit-control-panel.yml
@@ -10,3 +10,6 @@ statusIconTooltipInvalid:
 editMetadata:
   en: Edit metadata
   de: Metadaten bearbeiten
+editMetadataDisabledTooltip:
+  en: Editing the metadata of this document was disabled by a maintainer
+  de: Die Metadaten-Bearbeitung dieses Dokuments wurde von einem Maintainer deaktiviert
