--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -13,3 +13,12 @@ commentsPanelTitle:
 commentsHeader:
   en: Comments
   de: Kommentare
+openContributionReasonTooltip:
+  en: Editing this document was disabled by a maintainer
+  de: Die Bearbeitung dieses Dokuments wurde von einem Maintainer deaktiviert
+archiveReasonTooltip:
+  en: This document is archived and cannot be edited
+  de: Dieses Dokument ist archiviert und kann nicht editiert werden
+roomReasonTooltip:
+  en: Editing this document is only allowed for the room owner
+  de: Die Bearbeitung dieses Dokuments ist nur für den Raumbesitzer erlaubt
