--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -13,12 +13,18 @@ commentsPanelTitle:
 commentsHeader:
   en: Comments
   de: Kommentare
-openContributionReasonTooltip:
+viewHistoryRestrictionTooltip_annonymousUser:
+  en: Viewing document history is only allowed for logged in users
+  de: Ansehen von vorherige Versionen ?? is nur für angemeldet Benutzern elaubt
+editRestrictionTooltip_annonymousUser:
+  en: Document editing is only allowed for logged in users
+  de: Bearbeitung von Dokumenten is nur für angemeldet Benutzern elaubt
+editRestrictionTooltip_openContribution:
   en: Editing this document was disabled by a maintainer
   de: Die Bearbeitung dieses Dokuments wurde von einem Maintainer deaktiviert
-archiveReasonTooltip:
-  en: This document is archived and cannot be edited
-  de: Dieses Dokument ist archiviert und kann nicht editiert werden
-roomReasonTooltip:
+editRestrictionTooltip_archive:
+  en: This document is archived
+  de: Dieses Dokument ist archiviert
+editRestrictionTooltip_room:
   en: Editing this document is only allowed for the room owner
   de: Die Bearbeitung dieses Dokuments ist nur für den Raumbesitzer erlaubt
