EDU-1065 Remove useless default values in catalog plugin

--- a/src/plugins/catalog/catalog.yml
+++ b/src/plugins/catalog/catalog.yml
@@ -38,7 +38,7 @@ externalLink:
   en: external link
   de: Externer Link
 externalUrl:
-  en: external URL
+  en: External URL
   de: Externe URL
 adoptDocumentTitle:
   en: Adopt as title
