--- a/src/components/pages/admin.yml
+++ b/src/components/pages/admin.yml
@@ -1,6 +1,9 @@
 settingsTabTitle:
   en: Settings
   de: Einstellungen
+usersTabTitle:
+  en: Users
+  de: Benutzer
 storagePlansTabTitle:
   en: Storage plans
   de: Speicherpläne
