--- a/src/components/admin/users-tab.yml
+++ b/src/components/admin/users-tab.yml
@@ -34,6 +34,9 @@ country:
 internalUsers:
   en: Internal users
   de: Interne Benutzer
+externalUsers:
+  en: External users
+  de: Externe Benutzer
 storageUsers:
   en: Users with storage
   de: Benutzer mit Speicher
