--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -17,14 +17,14 @@ viewHistoryRestrictionTooltip_annonymousUser:
   en: Viewing document history is only allowed for logged in users
   de: Ansehen von vorherige Versionen ?? is nur für angemeldet Benutzern elaubt
 editRestrictionTooltip_annonymousUser:
-  en: Document editing is only allowed for logged in users
-  de: Bearbeitung von Dokumenten is nur für angemeldet Benutzern elaubt
+  en: Log in in order to edit this document
+  de: Melde dich an, um dieses Dokument zu bearbeiten
 editRestrictionTooltip_openContribution:
   en: Editing this document was disabled by a maintainer
   de: Die Bearbeitung dieses Dokuments wurde von einem Maintainer deaktiviert
 editRestrictionTooltip_archive:
-  en: This document is archived
-  de: Dieses Dokument ist archiviert
+  en: This document cannot be edited because it is archived
+  de: Dieses Dokument kann nicht bearbeitet werden da es archiviert ist
 editRestrictionTooltip_room:
   en: Editing this document is only allowed for the room owner
   de: Die Bearbeitung dieses Dokuments ist nur für den Raumbesitzer erlaubt
